# trait-mux

./: Cargo.toml  LICENSE  README.md
crates/trait_mux_macros/: Cargo.toml
crates/trait_mux_macros/src/: lib.rs
crates/trait_mux_macros/src/trait_mux/: analyze.rs  codegen.rs  lower.rs  mod.rs
src/: lib.rs
src/trait_mux/: lower.rs  parse.rs
tests/fail/: invalid_syntax.stderr  invalid_syntax_empty.rs  invalid_syntax_empty.stderr  invalid_syntax_empty_field.rs  invalid_syntax_empty_field.stderr  invalid_syntax_non_identifier.rs  invalid_syntax_non_identifier.stderr
tests/pass/: valid_syntax.rs
trait_mux/: Cargo.toml
trait_mux/src/: lib.rs
trait_mux/tests/fail/: invalid_syntax_non_identifier.rs
trait_mux/tests/pass/: valid_syntax.rs
trait_mux_macros/: Cargo.toml
trait_mux_macros/src/trait_mux/: analyze.rs  codegen.rs  lower.rs
