[package]
name = "trait_mux"
version = "0.1.0"
edition = "2024"
authors = ["Tal Risin <risint96@gmail.com>"]
rust-version = "1.86.0"

[workspace]
members = ["crates/trait_mux_macros"]
package = { edition = "2024", rust-version = "1.86.0" }

[dependencies]
trait_mux_macros = { path = "crates/trait_mux_macros", version = "0.1.0" }

[dev-dependencies]
trybuild = "~1.0"

[[test]]
name = "integration"
path = "tests/ui.rs"
