[workspace]
resolver = "2"
members = ["trait_mux", "trait_mux_macros"]

[workspace.package]
authors = ["Tal Risin <tal@risin.dev>"]
description = "Proc macro library for generating enums that can multiplex different trait objects"
edition = "2024"
keywords = ["trait", "multiplex", "mux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RisinT96/trait-mux"
rust-version = "1.86.0"
version = "0.2.0"
