[package]
name = "trait_mux_macros"
version = "0.1.0"
authors = ["Tal Risin <risint96@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "~1.0", features = ["full"] }
quote = "~1.0"
proc-macro2 = "~1.0"
proc-macro-error = "~1.0"
convert_case = "0.8.0"
